# enstein_stock_manager

./: .qmlls.ini  CMakeLists.txt  Main.qml  excelhandler.cpp  excelhandler.h  main.cpp
.github/workflows/: build.yml
