cmake_minimum_required(VERSION 3.16)

project(EnsteinStockManager VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ---- Windows: force shared Qt (fix MinGW entrypoint issue) ----
if (WIN32)
    set(BUILD_SHARED_LIBS ON)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "")
endif()

find_package(Qt6 REQUIRED COMPONENTS
    Core
    Gui
    Qml
    Quick
    Network
)

qt_standard_project_setup(REQUIRES 6.8)

# ---- QXlsx ----
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/QXlsx/QXlsx/CMakeLists.txt")
    add_subdirectory(QXlsx/QXlsx)
    message(STATUS "QXlsx found and added")
else()
    message(FATAL_ERROR "QXlsx not found!")
endif()

qt_add_executable(EnsteinStockManager
    main.cpp
)

qt_add_qml_module(EnsteinStockManager
    URI Enstein
    QML_FILES
        Main.qml
    SOURCES
        excelhandler.h
        excelhandler.cpp
)

set_target_properties(EnsteinStockManager PROPERTIES
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING
        ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
)

target_link_libraries(EnsteinStockManager
    PRIVATE
        Qt6::Core
        Qt6::Gui
        Qt6::Qml
        Qt6::Quick
        Qt6::Network
        QXlsx::QXlsx
)

include(GNUInstallDirs)

install(TARGETS EnsteinStockManager
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
